fix gap navbar

--- a/css/forgot.css
+++ b/css/forgot.css
@@ -28,7 +28,7 @@ body{
     position: fixed;
     align-items: center;
     width: 100%;
-    gap: 2rem;
+    gap: 1.5rem;
     padding: 0.5rem 5%;
     background: white;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
